# ac24test1

./: README.md
Codes/: CMakeLists.txt  basics.cpp  basics.h  mainAlzetteExpDL.cpp  mainChachaExpDL.cpp  mainChaskeyExpDL.cpp  mainForroExpDL.cpp  mainSalsaExpDL.cpp  mainSipHashExpCor.cpp  mainSpeck128ExpDL.cpp  mainSpeck32ExpDL.cpp  mainSpeck48ExpDL.cpp  mainSpeck64ExpDL.cpp  mainSpeck96ExpDL.cpp
Results/Alzette Results/: Alzette 4LC(R10 to R14), verify.txt  Alzette 6DL(R2 to R8) SUBs sets.txt  Alzette 6DL(R2 to R8), verify [][16] to [][6,5].txt  Alzette 7DL(R2 to R9), verify [][25] to [][15,14].txt  Alzette 7DL(R2 to R9), verify [][25] to [][15] and [][15,14].txt  Alzette 7DL(R3 to R10), verify [29][] to [][1].txt  grb_Alzette 1LC (R8 to R9), 1-bit or consecutive 2-bit output masks.txt  grb_Alzette 2DC (R0 to R2), 1-bit output differences.txt  grb_Alzette 2LC (R8 to R10), 1-bit or consecutive 2-bit input masks.txt  grb_Alzette 3LC (R8 to R11), 1-bit or consecutive 2-bit input masks.txt  grb_Alzette 3LC (R9 to R12), 1-bit or consecutive 2-bit input masks.txt
Results/ChaCha Results/: Chacha 2.5DL (R1 to R3.5), diff_R0_13[26] to mask_R3.5_9[0], experimental cor.txt  Chacha 2.5DL (R1 to R3.5), diff_R0_13[26] to mask_R3.5_9[0], mathematical cor.txt  Chacha 3.75LC(R3.5 to R7.25) verify.txt  grb_Chacha, our new 3.5LC (R3.5 to R7).txt  grb_Chacha, our new 3.75LCs (R3.5 to R7.25).txt
Results/Chaskey Results/: Chaskey 4DL(R1.5 to R5.5), [i] to [j].txt  Chaskey 4DL(R1.5 to R5.5), verify [31][][][] to [][][][11].txt  Chaskey 4DL(R1.5 to R5.5), verify v0[31] to v3[11].txt  (+2 more)
Results/Speck48 Results/: Speck48 5DL SUBs sets.txt  (+3 more)
(+119 files in other folders)
